<resources>
    <string name="app_name">TuServicio</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="todo">TODO</string>
    <string name="cliente">Cliente</string>
    <string name="prestador">Prestador</string>
    <string name="nombre">NOMBRE</string>
    <string name="apellido">APELLIDO</string>
    <string name="correo_electronico">CORREO ELECTRONICO</string>
    <string name="confirmar_contrase_a">CONFIRMAR CONTRASEÑA</string>
    <string name="contrase_a">CONTRASEÑA</string>
    <string name="ubicacion">UBICACION</string>
    <string name="confirmar">confirmar</string>
    <string name="registrarseMayus">REGISTRARSE</string>
    <string name="continuar">Continuar</string>
    <string name="cuenta_creada_exitosamente">Cuenta creada exitosamente</string>
    <string name="profesion">PROFESION</string>
    <string name="ubicacion">UBICACION</string>
    <string name="rango_de_servicio">Rango de servicio</string>
    <string name="_0_km">0 km</string>
    <string name="telefono">TELEFONO</string>
</resources>