<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66ACFF"
    tools:context=".SuccessFragment">

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="136dp"
        android:backgroundTint="@color/iris"
        android:text="@string/continuar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtServicio2"
        app:layout_constraintVertical_bias="0.881"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtServicio2"
        android:layout_width="237dp"
        android:layout_height="32dp"
        android:text="@string/cuenta_creada_exitosamente"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.142" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/tuservicio"
        app:layout_constraintBottom_toTopOf="@+id/btnFragment2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="270dp"
        android:layout_height="246dp"
        android:layout_marginTop="4dp"
        android:src="@android:drawable/btn_star_big_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo" />
</androidx.constraintlayout.widget.ConstraintLayout>